--- a/src/assets/Chat.scss
+++ b/src/assets/Chat.scss
@@ -1,3 +1,8 @@
+.main {
+  max-width: 80vw;
+  margin: 0 auto;
+}
+
 .main-nav {
   display: flex;
   flex-direction: row;
@@ -8,7 +13,7 @@
     cursor: pointer;
 
     .main-logo {
-      max-width: 8vw;
+      max-width: 4vw;
     }
   }
 }
@@ -21,6 +26,8 @@
   align-items: flex-end;
   justify-content: center;
   overflow: auto;
+  margin: 0 auto;
+  max-width: 80vw;
 
   li {
     width: 100%;
@@ -30,6 +37,7 @@
 .chat-container {
   width: 100%;
   height: 100%;
+  overflow-y: auto;
 
   .load {
     display: block;
@@ -64,12 +72,31 @@
         border-radius: .5rem;
         padding: .4rem .8rem;
         margin: .2rem;
+        vertical-align: middle;
+
+        &[data-picture] {
+          display: inline-block;
+          padding: 0;
+          margin: 0;
+          width: 4rem;
+
+          img {
+            max-width: 4rem;
+          }
+        }
+
+        &[data-content] {
+          display: inline-block;
+          width: calc(100% - 6rem);
+          color: #ffffff;
+        }
 
         b {
           display: block;
           font-size: .8rem;
           width: 100%;
           text-align: right;
+          color: #ffffff;
         }
       }
     }
@@ -79,13 +106,38 @@
     position: fixed;
     bottom: 0;
     text-align: center;
-    width: 100%;
+    width: 80vw;
+    margin: 0 auto;
+    height: 8vh;
+    text-align: center;
+
     [data-chat-input] {
       max-width: 80vw;
-      width: 100%;
+      width: 95%;
       border-radius: .5rem;
       border: 1px solid #000;
       padding: .5rem;
     }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .main {
+    max-width: 100vw;
+    margin: 0;
+  }
+
+  .main-nav {
+    .main-logo {
+      max-width: 8vw !important;
+    }
+  }
+
+  .main-header {
+    max-width: 100vw;
+  }
+
+  .action {
+    width: 100vw !important;
   }
 }
