--- a/src/assets/Contact.scss
+++ b/src/assets/Contact.scss
@@ -56,12 +56,21 @@
     padding: .2rem 1rem;
     display: inline-block;
     text-align: center;
+    max-width: 5rem;
+    overflow: hidden;
+    vertical-align: middle;
 
-    img {
+    .item-picture {
         max-width: 5rem;
         display: block;
         margin: 0 auto;
     }
+
+    .item-name {
+        max-height: 1rem;
+        overflow: hidden;
+    }
+
     [use-name] {
         cursor: pointer;
     }
