refactoring main scss

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -7,3 +7,94 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
 }
+
+.main {
+  max-width: 80vw;
+  margin: 0 auto;
+}
+
+.main-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: #7766dd;
+
+  .item-nav {
+    cursor: pointer;
+
+    .main-logo {
+      max-width: 4vw;
+    }
+  }
+}
+
+.main-header {
+  background-color: #ffffff;
+  max-height: 80vh;
+  overflow: auto;
+  margin: 0 auto;
+  max-width: 80vw;
+
+  li {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .main {
+    max-width: 100vw;
+    margin: 0;
+  }
+
+  .main-nav {
+    .main-logo {
+      max-width: 8vw !important;
+    }
+  }
+
+  .main-header {
+    max-width: 100vw;
+  }
+
+  .action {
+    width: 100vw !important;
+  }
+}
+
+.modal {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.35);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0.3s;
+}
+
+.modal-container {
+  margin: 0 auto;
+  width: 80vw;
+  height: 80vh;
+  background-color: #ffffff;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  text-align: center;
+  overflow: auto;
+
+  .fechar {
+    position: absolute;
+    top: .5rem;
+  }
+
+  .fechar {
+    right: .5rem;
+  }
+
+}
